--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto 0;
-  padding: 45px 0 60px;
+  padding: 45px 200px 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
