--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,6 @@
 @import url(../vendor/normalize.css);
 
 @import url(../blocks/page/page.css);
+
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__image/header__image.css);
