--- a/blocks/profile/__addButton/profile__addButton.css
+++ b/blocks/profile/__addButton/profile__addButton.css
@@ -1,5 +1,10 @@
 .profile__addButton {
+  margin: 0;
+  padding: 0;
   width: 150px;
   height: 50px;
   margin-left: auto;
+  background-color: #000;
+  border: 0;
+  background-image: url(../../../images/AddButton.svg);
 }
