--- a/pages/index.css
+++ b/pages/index.css
@@ -18,3 +18,10 @@
 @import url(../blocks/profile/__profession/profile__profession.css);
 @import url(../blocks/profile/__editButton/profile__editButton.css);
 @import url(../blocks/profile/__addButton/profile__addButton.css);
+
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/element/element.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__group/element__group.css);
+@import url(../blocks/element/__text/element__text.css);
+@import url(../blocks/element/__like/element__like.css);
