--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,4 @@
 @import url(../blocks/popup/__name/popup__name.css);
 @import url(../blocks/popup/__profession/popup__profession.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
+@import url(../blocks/popup/_is-opened/popup_is-opened.css);
