--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -5,7 +5,7 @@
   width: 32px;
   height: 32px;
   position: fixed;
-  background-color: #000;
+  background: rgba(0, 0, 0, 0);
   background-image: url(../../../images/popup__close.png);
   top: calc(195px - 8px - 32px);
   left: calc(100% / 2 + 430px / 2 + 8px);
