--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -4,6 +4,17 @@
   border: 0;
   width: 358px;
   height: 50px;
-  background-image: url(../../../images/popup__submit.png);
-  z-index: 1;
+  border-radius: 2px;
+  background-color: black;
+  color: #fff;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  transition: opacity 0.3s;
+}
+
+.popup__submit:hover {
+  opacity: 0.8;
 }
