--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -10,3 +10,10 @@
   display: flex;
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 600px) {
+  .footer__copyright{
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
