--- a/blocks/popup/__profession/popup__profession.css
+++ b/blocks/popup/__profession/popup__profession.css
@@ -10,3 +10,9 @@
   font-size: 14px;
   line-height: 17px;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__profession{
+    margin-bottom: 44px;
+  }
+}
