--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -18,3 +18,12 @@
 .popup__submit:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__submit{
+    width: 238px;
+    height: 46px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
