--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,9 @@
   flex-direction: column;
   justify-content: center;
 }
+
+@media screen and (max-width: 600px) {
+  .profile__info{
+    margin: 0 19px;
+  }
+}
