--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -1,6 +1,7 @@
 .element__text {
   margin: 0;
   padding: 0;
+  max-width: 80%;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -9,4 +10,10 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+@media screen and (max-width: 960px) {
+  .element__text{
+    max-width: 90%;
+  }
 }
