--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,3 +3,10 @@
   padding: 0;
   width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+  .footer{
+    padding: 0 19px 0;
+    box-sizing: border-box;
+  }
+}
