--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -10,3 +10,15 @@
   align-items: center;
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 960px) {
+  .page{
+    padding: 45px 70px 60px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .page{
+    padding: 28px 0 36px;
+  }
+}
