--- a/blocks/profile/__addButton/profile__addButton.css
+++ b/blocks/profile/__addButton/profile__addButton.css
@@ -5,11 +5,29 @@
   height: 50px;
   margin-left: auto;
   background-color: #000;
-  border: 0;
+  border: 2px solid #FFFFFF;
+  border-radius: 2px;
   background-image: url(../../../images/AddButton.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   transition: opacity 0.3s;
 }
 
 .profile__addButton:hover {
   opacity: 0.6;
+}
+
+@media screen and (max-width: 960px) {
+  .profile__addButton{
+    margin-left: 0;
+    width: calc(100% - 100px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__addButton{
+    width: 100%;
+    height: 50px;
+    background-image: url(../../../images/AddButton320.svg);
+  }
 }
