--- a/blocks/profile/__editButton/profile__editButton.css
+++ b/blocks/profile/__editButton/profile__editButton.css
@@ -6,10 +6,22 @@
   height: 24px;
   margin-left: 18px;
   background-image: url(../../../images/EditButton.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: #000;
+  border: 1px solid #FFFFFF;
   transition: opacity 0.3s;
 }
 
 .profile__editButton:hover {
   opacity: 0.6;
+}
+
+@media screen and (max-width: 600px) {
+  .profile__editButton{
+    width: 18px;
+    height: 18px;
+    margin-left: 10px;
+    background-image: url(../../../images/EditButton320.svg);
+  }
 }
