--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,10 +1,28 @@
 .profile__name {
   margin: 0;
   padding: 0;
-  margin-bottom: 9px;
+  max-width: 80%;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px; /* or 114% */
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 960px) {
+  .profile__name{
+    text-align: center;
+    margin-left: 42px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__name{
+    font-size: 27px;
+    line-height: 33px;
+    margin-left: 28px;
+  }
 }
