--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -1,9 +1,26 @@
 .profile__profession {
   margin: 0;
   padding: 0;
+  margin-top: 9px;
+  max-width: 100%;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+}
+
+@media screen and (max-width: 960px) {
+  .profile__profession{
+    margin-bottom: 32px;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile__profession{
+    margin-top: 8px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
