--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,6 +9,12 @@
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 @media screen and (max-width: 960px) {
