--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto 0;
-  padding: 45px 15.625% 60px;
+  padding: 45px 200px 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,6 +15,12 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+}
+
+@media screen and (max-width: 1280px) {
+  .page{
+    padding: 45px 15.625% 60px;
+  }
 }
 
 @media screen and (max-width: 960px) {
