Добавить альтернативный шрифт и тип засечек

--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -7,7 +7,7 @@
   border-radius: 2px;
   background-color: black;
   color: #fff;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
