--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   max-width: 80%;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
