--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -4,7 +4,7 @@
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 21px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
