--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin-top: 9px;
   max-width: 100%;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
