--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -6,6 +6,7 @@
   height: 19px;
   background: rgba(0, 0, 0, 0);
   background-image: url(../../../images/Element__like.svg);
+  cursor: pointer;
   transition: opacity 0.3s;
 }
 
