--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -7,6 +7,7 @@
   border-radius: 2px;
   background-color: black;
   color: #fff;
+  cursor: pointer;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
