Добавить скрытие текста при переполнении контента

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,7 @@
 .profile__name {
   margin: 0;
   padding: 0;
-  max-width: 90%;
+  max-width: 340px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -21,6 +21,7 @@
 
 @media screen and (max-width: 600px) {
   .profile__name{
+    max-width: 220px;
     font-size: 27px;
     line-height: 33px;
   }
