--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -2,12 +2,15 @@
   margin: 0;
   padding: 0;
   margin-top: 9px;
-  max-width: 100%;
+  max-width: 400px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 960px) {
@@ -19,6 +22,7 @@
 
 @media screen and (max-width: 600px) {
   .profile__profession{
+    max-width: 280px;
     margin-top: 8px;
     font-size: 14px;
     line-height: 17px;
