Перенести определение шрифтов из элементов в блоки

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 @media screen and (max-width: 600px) {
