--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  font-family: 'Inter', Arial, sans-serif;
 }
 
 @media screen and (max-width: 960px) {
