--- a/blocks/profile/__addButton/profile__addButton.css
+++ b/blocks/profile/__addButton/profile__addButton.css
@@ -4,7 +4,7 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
-  background-color: #000;
+  background: rgba(0, 0, 0, 0);
   border: 2px solid #FFFFFF;
   border-radius: 2px;
   background-image: url(../../../images/AddButton.svg);
