--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile__addButton {
+.profile__add-button {
   margin: 0;
   padding: 0;
   width: 150px;
@@ -14,19 +14,19 @@
   transition: opacity 0.3s;
 }
 
-.profile__addButton:hover {
+.profile__add-button:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 960px) {
-  .profile__addButton{
+  .profile__add-button{
     margin-left: 0;
     width: calc(100% - 100px);
   }
 }
 
 @media screen and (max-width: 600px) {
-  .profile__addButton{
+  .profile__add-button{
     width: 100%;
     height: 50px;
     background-image: url(../../../images/AddButton320.svg);
