--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   border: 0;
+  margin-top: 27px;
   width: 358px;
   height: 50px;
   border-radius: 2px;
@@ -25,5 +26,6 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-top: 23px;
   }
 }
