--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,20 +4,20 @@
   border: 0;
   width: 32px;
   height: 32px;
-  position: fixed;
+  position: absolute;
   background: rgba(0, 0, 0, 0);
   background-image: url(../../../images/popup__close.svg);
   cursor: pointer;
-  top: calc(195px - 8px - 32px);
-  left: calc(100% / 2 + 430px / 2 + 8px);
+  top: -40px;
+  right: -40px;
 }
 
 @media screen and (max-width: 600px) {
   .popup__close{
     width: 20px;
     height: 20px;
-    top: 87px;
-    left: calc(100% / 2 + 282px / 2 - 20px);
+    top: -36px;
+    right: 0;
     background-image: url(../../../images/popup__close320.svg);
   }
 }
