--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,24 +1,16 @@
 .popup__container {
-  position: fixed;
   width: 430px;
-  height: 330px;
-  top: 195px;
-  left: calc(100% / 2 - 430px / 2);
-  justify-content: center;
-  align-items: center;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   padding: 34px 36px 37px;
   box-sizing: border-box;
+  position: relative;
 }
 
 @media screen and (max-width: 600px) {
   .popup__container{
     width: 282px;
-    height: 322px;
-    top: 123px;
-    left: calc(100% / 2 - 282px / 2);
     padding: 25px 22px 25px;
   }
 }
