--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,23 +2,8 @@
   width: 100%;
   display: grid;
   grid-auto-rows: 361px;
-  grid-template-columns: repeat(3, calc(33.3% - 11.031px));
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   column-gap: 17px;
   row-gap: 20px;
   box-sizing: border-box;
-}
-
-@media screen and (max-width: 960px) {
-  .elements{
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, calc(50% - 9px));
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .elements{
-    grid-template-rows: repeat(6, 1fr);
-    grid-template-columns: 100%;
-    column-gap: 0;
-  }
 }
