Исправить все ошибки по второму ревью

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -16,5 +16,5 @@
 
 .element__like:active {
   opacity: 1;
-  background-image: url(../../../images/AddButton_active.png);
+  background-image: url(../../../images/Element__like_active.svg);
 }
