Добавление первых 6 картинок, Лайки

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -14,7 +14,7 @@
   opacity: 0.5;
 }
 
-.element__like:active {
+/*.element__like:active {
   opacity: 1;
   background-image: url(../../../images/Element__like_active.svg);
-}
+}*/
