--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,6 @@
 @import url(../blocks/popup/__field/popup__field.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/_is-opened/popup_is-opened.css);
+@import url(../blocks/popup/__element/popup__element.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__text/popup__text.css);
