Ховер для крестика

--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -10,6 +10,7 @@
   cursor: pointer;
   top: -40px;
   right: -40px;
+  transition: opacity 0.3s;
 }
 
 @media screen and (max-width: 600px) {
@@ -20,4 +21,8 @@
     right: 0;
     background-image: url(../../../images/popup__close320.svg);
   }
+}
+
+.popup__close:hover {
+  opacity: 0.6;
 }
