--- a/pages/index.css
+++ b/pages/index.css
@@ -35,6 +35,7 @@
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__field-error/popup__field-error.css);
 @import url(../blocks/popup/__field/_type_error/popup__field_type_error.css);
 @import url(../blocks/popup/__field/_error_active/popup__field_error_active.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
