--- a/main.css
+++ b/main.css
@@ -20,8 +20,10 @@
 .element__trash{background:transparent;background-image:url(cbc09a894bdd4c956365.svg);border:0;cursor:pointer;height:19px;margin:0;padding:0;position:absolute;right:20px;top:20px;transition:opacity .3s;width:18px}.element__trash:hover{opacity:.6}
 .element__group{align-items:center;box-sizing:border-box;display:flex;justify-content:space-between;padding:25px 20px 26px 21px}
 .element__text{font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0;max-width:80%;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:960px){.element__text{max-width:90%}}
+.element__likes{align-items:center;display:flex;flex-direction:column;gap:3px}
 .element__like{background:transparent;background-image:url(87ed371465c7a6a1cd01.svg);border:0;cursor:pointer;height:19px;margin:0;min-width:22px;padding:0;transition:opacity .3s}.element__like:hover{opacity:.5}
 .element__like_liked{background-image:url(fe17a515669479b1e649.svg);opacity:1}
+.element__count{color:#000;font-family:Inter;font-size:13px;font-style:normal;font-weight:400;height:13px;line-height:16px;text-align:center;width:10px}
 .popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;font-family:Inter,Arial,sans-serif;height:100%;justify-content:center;opacity:0;position:fixed;top:0;transition:visibility .5s,opacity .5s;visibility:hidden;width:100%}
 .popup__close{background:transparent;background-image:url(2ceb783afbab75916ddc.svg);border:0;cursor:pointer;height:32px;margin:0;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .3s;width:32px}@media screen and (max-width:600px){.popup__close{background-image:url(b793e07c3f4c19e26c11.svg);height:20px;right:0;top:-36px;width:20px}}.popup__close:hover{opacity:.6}
 .popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;padding:34px 36px 37px;position:relative;width:430px}@media screen and (max-width:600px){.popup__container{padding:25px 22px;width:282px}}
@@ -32,6 +34,7 @@
 .popup__field_type_error{border-bottom-color:red}
 .popup__field_error_active{color:red}
 .popup__submit{background-color:#000;border:0;border-radius:2px;color:#fff;cursor:pointer;font-size:18px;font-style:normal;font-weight:400;height:50px;line-height:22px;margin:27px 0 0;padding:0;transition:opacity .3s;width:358px}.popup__submit:hover{opacity:.8}@media screen and (max-width:600px){.popup__submit{font-size:14px;height:46px;line-height:17px;margin-top:23px;width:238px}}
+.popup__submit-delete{margin-top:0}
 .popup__submit_inactive{background-color:#fff;border:1px solid #000;color:#000;cursor:default;opacity:.2}.popup__submit:hover{opacity:.2}
 .popup_is-opened{opacity:1;visibility:visible}
 .popup__element{position:relative}
